# lolcat

./: .gitignore  environment.yml  pyproject.toml
lolcat/: inmemory_dataset.py  khoury_dataset.py  nn.py  training.py  utils.py
notebooks/: train_allen.ipynb  train_khoury_som.ipynb
